hero and some sections finished

--- a/src/scss/abstracts/_fonts.scss
+++ b/src/scss/abstracts/_fonts.scss
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-    font-family: 'Poppins500';
+    font-family: 'Manrope500';
     src: url('../../fonts/Manrope-Medium.ttf');
 }
 
