--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,1 +1,108 @@
 @use '../abstracts' as *;
+
+.footer {
+    background: #f4f7ff;
+    padding-top: 48px;
+
+    &__content {
+        .footer__icon {
+            display: flex;
+            justify-content: center;
+
+            img {
+                width: 106px;
+            }
+        }
+
+        nav {
+            margin-top: 40px;
+            margin-bottom: 32px;
+            display: flex;
+            justify-content: space-between;
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 0px;
+
+                h3 {
+                    font-size: 17px;
+                    margin-bottom: 16px;
+                }
+
+                a {
+                    font-size: 18px;
+                    line-height: 32px;
+                    color: #1b5bf7;
+                }
+            }
+        }
+
+        .footer__bottom {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            padding: 25px 0;
+            border-top: 1px solid rgba(27, 91, 247, .2);
+
+            p {
+                color: #1b5bf7;
+                font-size: 14px;
+                font-family: Manrope500;
+            }
+            div {
+                display: flex;
+                align-items: center;
+                gap: 16px;
+                a {
+                    width: 38px;
+                    height: 38px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 50%;
+                    background: #dde7ff;
+                    font-size: 22px;
+                    color: #1b5bf7;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .footer {
+        padding-top: 16px;
+        &__content {
+            nav {
+                flex-direction: column;
+                gap: 32px;
+                ul {
+                    h3 {
+                        font-size: 20px !important;
+                        font-family: Manrope500;
+                    }
+                }
+            }
+            .footer__bottom {
+                border-top: 0;
+                gap: 20px;
+                align-items: center;
+                flex-direction: column-reverse;
+                p {
+                    margin-bottom: 26px;
+                }
+                div {
+                    a {
+                        width: 30px;
+                        height: 30px;
+                        font-size: 14px;
+                        background-color: #1b5bf7;
+                        color: white;
+                    }
+                }
+            }
+        }
+    }
+}
