--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,6 +5,7 @@
     background: white;
     position: sticky;
     top: 0;
+    z-index: 99;
 
     nav {
         height: 72px;
@@ -73,6 +74,7 @@
     transition: .5s;
     background: #f4f7ff;
     position: fixed;
+    z-index: 100;
     width: 100%;
     height: 105vh;
     top: 0;
@@ -179,7 +181,7 @@
     }
 }
 
-@media (max-width: 864px) {
+@media (max-width: 900px) {
     .header {
         nav {
             height: 64px;
