--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -165,11 +165,11 @@
     background: #f4f7ff;
     position: fixed;
     z-index: 100;
-    width: 100%;
     height: 105vh;
     top: 0;
     right: 0;
     left: 0;
+    overflow: hidden;
 
     .nav {
         height: 64px;
